ForceFinishController